--- a/CSF2Homework/Login/Login.csproj
+++ b/CSF2Homework/Login/Login.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{84CC6A84-42CE-461D-9D50-5B6DA45FA208}</ProjectGuid>
+    <ProjectGuid>{4C8FA354-8DD9-4589-8375-ED4E8E0CDA84}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClassesLibrary</RootNamespace>
-    <AssemblyName>ClassesLibrary</AssemblyName>
+    <RootNamespace>Login</RootNamespace>
+    <AssemblyName>Login</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,19 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Album.cs" />
-    <Compile Include="Book.cs" />
-    <Compile Include="MotorHome.cs" />
-    <Compile Include="ContactInfo.cs" />
-    <Compile Include="CreditCardAccount.cs" />
-    <Compile Include="Customer.cs" />
-    <Compile Include="Library.cs" />
     <Compile Include="Login.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Song.cs" />
-    <Compile Include="Student.cs" />
-    <Compile Include="Truck.cs" />
-    <Compile Include="Vehicle.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
